Enhance security: JWT, logging, CORS, rate limit
Multiple security hardening changes across the codebase:

- Added RateLimitFilter to throttle auth endpoints by IP (in-memory, note suggests Redis+Bucket4j for production).
- JwtAuthenticationFilter: removed ex.printStackTrace(), improved WARN messages to avoid leaking stack traces.
- JwtService: fixed getSigningKey() to decode a Base64 secret correctly; documents requirement to regenerate JWT_SECRET (openssl rand -base64 32).
- AuthService: account lockout handling, unified error/logging behavior, avoid logging raw reset tokens (trace only in dev), audit logs for password resets, improved error handling and messages.
- SecurityConfig: strengthened HTTP security headers (CSP, HSTS, Referrer-Policy, XSS protection), stateless session, explicit 401 responses for unauthenticated, BCrypt strength increased, Swagger endpoints gated by config flag.
- CorsConfig: tightened allowed headers/methods, expose only Authorization, set preflight maxAge.
- S3StorageService and ArchivoService: sanitize filenames to prevent header injection, removed System.out.println debug prints (use log.debug), added common image extensions allowed.
- application.yml: multipart upload limits, disable including error messages/stacktraces in responses, add swagger enabled flag and OCR webhook config.

Why: fix OWASP issues (A02 cryptographic failures, A05 misconfiguration, A09 logging, A07 auth failures, A03 injection, A01 access control) and reduce info leakage. Action required: regenerate and update JWT_SECRET as Base64 32-bytes.